Intent p criar da MainActivity  na DrawActivity

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -5,4 +5,6 @@
     <string name="send">Enviar</string>
     <string name="type_your_name">Digite o seu nome</string>
     <string name="hello_name">Olá, %1$s</string>
+    <string name="menu_home">Inicio</string>
+    <string name="menu_gallery">Galeria</string>
 </resources>
