--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -7,4 +7,7 @@
     <string name="hello_name">Olá, %1$s</string>
     <string name="menu_home">Inicio</string>
     <string name="menu_gallery">Galeria</string>
+    <string name="send_to_result_screen">Enviar para a tela de resultado</string>
+    <string name="nav_header_desc">Cabeçalho de navegação</string>
+    <string name="action_settings">Configurações</string>
 </resources>
