--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -10,4 +10,5 @@
     <string name="send_to_result_screen">Enviar para a tela de resultado</string>
     <string name="nav_header_desc">Cabeçalho de navegação</string>
     <string name="action_settings">Configurações</string>
+    <string name="open_screen_to_get_result">Abrir Tela para Receber Resultado</string>
 </resources>
