--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow" translatable="false">Slideshow</string>
     <string name="send_to_result_screen">Send to Result Screen</string>
+    <string name="open_screen_to_get_result">Open Screen to Get Result</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
 </resources>
