--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="type_your_name">Type your name</string>
     <string name="send">Send</string>
     <string name="hello_name">Hello, %1$s!</string>
-    <string name="title_activity_drawer">DrawerActivity</string>
+    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">Android Studio</string>
@@ -19,4 +19,7 @@
     <string name="open_screen_to_get_result">Open Screen to Get Result</string>
     <string name="yes">YES</string>
     <string name="no">NO</string>
+    <string name="Cancel" >Cancel</string>
+    <string name="activity_was_canceled">Activity was canceled</string>
+    <string name="data_received">Data received: %1$s</string>
 </resources>
